--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                        <div class="social-icons">
                         <a href="https://www.facebook.com/Adnan.Robin.6262/"><i class="fa-brands fa-facebook"></i></a>
                         <a href="https://www.instagram.com/md_shadman_mahfuz_raafi/"><i class="fa-brands fa-instagram"></i></a>
-                        <a href="https://wa.me<01783776280"><i class="fa-brands fa-whatsapp"></i></a>
+                        <a href="https://wa.me/8801783776280"><i class="fa-brands fa-whatsapp"></i></a>
                        </div>
                        <a href="images/My-CV.pdf" download class="btn btn2">Download CV</a>
                 </div>
